 ####    #### ####    #### ############ ####         #### ####
 ####    #### ####    #### ####    #### ####         ####  ####
  ####  ####   ####   #### ####    #### ####         ####   ####
   ########     ########## ####    #### ####         ####    ####
       #####
        #####       Quake Army Knife 6.6 Changelog

6.6.0 Beta 2
============

* [cdunde]: Fixes and additions by X7 for rotation entities that use an origin brush.

* [cdunde]: Added new functions and handles for Half-Life 2 and other games
          - with the use of original code by Alexander, previous team member.
          - 1) New handle and line drawing for spotlight inter and outer cones.
          - 2) HL2 only, added handels for setting func_useableladder function (point0 & point1).
          - 3) HL2 only, added handels for setting func_breakable_glass and func_breakable_surf,
          -       (lowerleft, upperleft, lowerright and upperright).

* [cdunde]: Complete update of the WarsowEntities by X7, good job and thanks.

* [cdunde]: Fixed "Color Selector Dialog" to update correctly when needed.

* [cdunde]: Fixed the loss of the model editor causing the Skin-view to not work properly.

6.6.0 Beta 1
============

* [cdunde]: Some nice fixes by 'Who Gives A Dam' to the 'Worldcraft .fgd file' converter, thks.

* [cdunde]: Setup for Warsow with .md3 model support, entities, textures and shaders.

* [cdunde]: Made changes to sort material lists, cleanup dead ones and improved missing ones.

* [cdunde]: Added full game support for NEXUIZ including .md3 model displaying.

* [cdunde]: Added a new Conversion Tools for making game support QuArK .qrk files.

* [DanielPharos]: Build old PCX file loading code back in. DevIL and FreeImage were causing
          - random trouble.

* [cdunde]: Cleaned up, fixed if needed and brought into sync with all QuArK addons.

* [cdunde]: Did a lot of standardize file work and cleanup of texture and entity coding.
